--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,51 @@
-
-
 body {
   background-color: #ffeadb;
-}
-hr{
-  border-style: dotted none none;
-  border-width: 5px;
-  border-color: #678a74 ;
-  width: 5%;
-}
-h1{
-  color: #66bfbf;
-}
-h3{
-  color: #66bfbf;
+  margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+
 }
 
-#info{
-  color: blue;
+h1 {
+  margin-top: 0;
+  font-family: 'Sacramento', cursive;
 }
-.circular{
-  border-radius: 100%;
+h2{
+  font-family: 'Montserrat', sans-serif;
+}
+h3{
+  font-family: 'Montserrat', sans-serif;
+}
+
+div {
+  background-color: #f7c5a8;
+
+}
+.top{
+  background-color: #ffeadb;
+  position: relative;
+  padding-top: 100px;
+}
+
+.middle {
+
+}
+
+.bottom{
+}
+
+/* .pro{
+  text-decoration: underline;
+} */
+
+.top-cloud{
+  position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud{
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
