--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,22 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
-
+  font-size: 125%;
 }
 
 h1 {
-  margin-top: 0;
+  font-size: 5.625rem;
+  color: #66bfbf;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
 }
 h2{
+  font-size: 2.5em;
+  color: #66bfbf;
   font-family: 'Montserrat', sans-serif;
 }
 h3{
+  #color: #11999e;
   font-family: 'Montserrat', sans-serif;
 }
 
