--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,32 @@ div {
   text-decoration: underline;
 } */
 
+.btn {
+  font-family: arial;
+  color: #14396a !important;
+  font-size: 14px;
+  text-shadow: 1px 1px 0px #7cacde;
+  box-shadow: 1px 1px 1px #bee2f9;
+  padding: 10px 25px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  border: 2px solid #3866a3;
+  background: #63b8ee;
+  background: linear-gradient(top,  #63b8ee,  #468ccf);
+  background: -ms-linear-gradient(top,  #63b8ee,  #468ccf);
+  background: -webkit-gradient(linear, left top, left bottom, from(#63b8ee), to(#468ccf));
+  background: -moz-linear-gradient(top,  #63b8ee,  #468ccf);
+}
+.btn:hover {
+  color: #14396a !important;
+  background: #468ccf;
+  background: linear-gradient(top,  #468ccf,  #63b8ee);
+  background: -ms-linear-gradient(top,  #468ccf,  #63b8ee);
+  background: -webkit-gradient(linear, left top, left bottom, from(#468ccf), to(#63b8ee));
+  background: -moz-linear-gradient(top,  #468ccf,  #63b8ee);
+}
+
 .top-cloud{
   position: absolute;
     right: 300px;
